# pdf-core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: api.md  api.md.tmpl
proto/redactr/pdf/v1/: pdf_service.proto
src/pdf_service/: config.py  server.py
src/pdf_service/core/: annotation.py  branding.py  document_info.py  ocr.py  redaction.py  text_extraction.py  types.py
src/pdf_service/grpc/: servicer.py
tests/: conftest.py
tests/e2e/: conftest.py  test_annotation.py  test_document_info.py  test_full_flow.py  test_redaction.py  test_text_extraction.py
tests/unit/: test_annotation.py  test_branding.py  test_document_info.py  test_ocr.py  test_redaction.py  test_text_extraction.py
